@@ -17,41 +17,17 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <tycho.version>0.21.0</tycho.version>
 
-	<!-- Sonar -->
+	<sonar.language>java</sonar.language>
 	<sonar.java.source>1.7</sonar.java.source>
-	<!-- Sonar/Reporting settings -->
-	<!-- ************************ -->
-	<!-- Sonar/Jacoco integration. Note that these properties need to be defined outside the "coverage" profile
-	because we want to be to able to execute mvn sonar:sonar without passing a profile -->
-	<!-- Tells Sonar to use jacoco for coverage results -->
-	<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-	<!-- Jacoco version to use -->
-	<jacoco.version>0.7.0.201403182114</jacoco.version>
-	<!-- The Sonar Jacoco Listener for JUnit to extract coverage details per test -->
-	<sonar-jacoco-listeners.version>1.4</sonar-jacoco-listeners.version>
-	<!-- Don't let Sonar execute tests. We will ask it to Maven -->
+	<sonar.core.coveragePlugin>jacoco</sonar.core.coveragePlugin>
 	<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-	<!-- The system property jacoco.outputDir needs to be override on the command line
-	with an absolute path if you want to merge results from all modules.
-	Example in a Jenkisn build where ${WORKSPACE} is defined and your project in the root directory of the workspace :
-	mvn clean install -Prun-its,coverage -Djacoco.outputDir=${WORKSPACE}/target
-	Note that unfortunately using the following does not work because of
-	 
-	http://jira.codehaus.org/browse/SONAR-3427:
-	 
-	<jacoco.outputDir>${session.executionRootDirectory}/target/</jacoco.outputDir>
-	-->
-	<jacoco.outputDir>${project.build.directory}</jacoco.outputDir>
-	<!-- Jacoco output file for UTs -->
-	<jacoco.out.ut.file>jacoco-ut.exec</jacoco.out.ut.file>
-	<!-- Tells Sonar where the Jacoco coverage result file is located for Unit Tests -->
-	<sonar.jacoco.reportPath>${jacoco.outputDir}/${jacoco.out.ut.file}</sonar.jacoco.reportPath>
-	<!-- Jacoco output file for ITs -->
-	<jacoco.out.it.file>jacoco-it.exec</jacoco.out.it.file>
-	<!-- Tells Sonar where the Jacoco coverage result file is located for Integration Tests -->
-	<sonar.jacoco.itReportPath>${jacoco.outputDir}/${jacoco.out.it.file}</sonar.jacoco.itReportPath>
+	<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+	<sonar.junit.reportPath>../${project.artifactId}.tests/target/surefire-reports/</sonar.junit.reportPath>
+	<sonar.skippedModules>ru.taximaxim.codekeeper.ui.tests</sonar.skippedModules>
+	
   </properties>
   <profiles>
 	  <profile>
@@ -59,82 +35,25 @@
 	  <build>
 	    <plugins>
 	      <plugin>
-	        <groupId>org.apache.maven.plugins</groupId>
-	        <artifactId>maven-surefire-plugin</artifactId>
-	        <version>2.17</version>
-	        <configuration>
-	          <argLine>${jacoco.agent.ut.arg}</argLine>
-	          <!-- Specific to generate mapping between tests and covered code -->
-	          <properties>
-	            <property>
-	              <name>listener</name>
-	              <value>org.sonar.java.jacoco.JUnitListener</value>
-	            </property>
-	          </properties>
-	        </configuration>
-	      </plugin>
-	      <plugin>
-	        <groupId>org.apache.maven.plugins</groupId>
-	        <artifactId>maven-failsafe-plugin</artifactId>
-	        <version>2.17</version>
-	        <configuration>
-	          <argLine>-Xmx1024m -XX:MaxPermSize=256m ${jacoco.agent.it.arg}</argLine>
-	          <!-- Specific to generate mapping between tests and covered code -->
-	          <properties>
-	            <property>
-	              <name>listener</name>
-	              <value>org.sonar.java.jacoco.JUnitListener</value>
-	            </property>
-	          </properties>
-	          <!-- Let's put failsafe reports with surefire to have access to tests failures/success reports in sonar -->
-	          <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-	        </configuration>
-	      </plugin>
-	      <plugin>
 	        <groupId>org.jacoco</groupId>
 	        <artifactId>jacoco-maven-plugin</artifactId>
-	        <version>${jacoco.version}</version>
-	        <executions>
-	          <!-- Prepares a variable, jacoco.agent.ut.arg, that contains the info to be passed to the JVM hosting the code
-	being tested. -->
-	          <execution>
-	            <id>prepare-ut-agent</id>
-	            <phase>process-test-classes</phase>
-	            <goals>
-	              <goal>prepare-agent</goal>
-	            </goals>
-	            <configuration>
-	              <destFile>${sonar.jacoco.reportPath}</destFile>
-	              <propertyName>jacoco.agent.ut.arg</propertyName>
-	              <append>true</append>
-	            </configuration>
-	          </execution>
-	          <!-- Prepares a variable, jacoco.agent.it.arg, that contains the info to be passed to the JVM hosting the code
-	being tested. -->
-	          <execution>
-	            <id>prepare-it-agent</id>
-	            <phase>pre-integration-test</phase>
-	            <goals>
-	              <goal>prepare-agent</goal>
-	            </goals>
-	            <configuration>
-	              <destFile>${sonar.jacoco.itReportPath}</destFile>
-	              <propertyName>jacoco.agent.it.arg</propertyName>
-	              <append>true</append>
-	            </configuration>
-	          </execution>
-	        </executions>
+	        <version>0.7.0.201403182114</version>
+	         <configuration>
+				<includes>
+					<include>tests.*</include>
+				</includes>
+				<destFile>${project.basedir}/../target/jacoco.exec</destFile>
+			</configuration>
+			<executions>
+				<execution>
+					<goals>
+						<goal>prepare-agent</goal>
+					</goals>
+				</execution>
+			</executions>
 	      </plugin>
 	    </plugins>
 	  </build>
-	  <dependencies>
-	    <dependency>
-	      <groupId>org.codehaus.sonar-plugins.java</groupId>
-	      <artifactId>sonar-jacoco-listeners</artifactId>
-	      <version>${sonar-jacoco-listeners.version}</version>
-	      <scope>test</scope>
-	    </dependency>
-	  </dependencies>
 	</profile>
 </profiles>
   <dependencies>
